# hiya

./: .gitignore  LICENSE  README.md  SECURITY.md  bioauth.spec  hiya.spec  install.sh  meson.build  meson_options.txt
config/: 70-bioauth-fingerprint.rules  bioauth-fido2.service  bioauth-polkit-agent.desktop  bioauth.conf  biometric-authd.service  hiya-authd.service  hiya-authd.socket  hiya-fido2.service  hiya-polkit-agent.desktop  hiya.conf  hiya.portal  meson.build  org.bioauth.Daemon.service  org.bioauth.Manager.conf  org.bioauth.Manager.service  org.bioauth.policy  org.freedesktop.impl.portal.desktop.bioauth.service  org.freedesktop.impl.portal.desktop.hiya.service  org.hiya.Daemon.service  org.hiya.Manager.conf  org.hiya.Manager.service  org.hiya.policy  pam_hiya
config/kde/: org.bioauth.Manager.xml  org.hiya.Manager.xml
config/kde/pam.d/: kde  polkit-1  sddm
data/: hiya-phase2.desktop.in  org.hiya.json.in
include/: bio_common.h
scripts/install/: bioauth-kde-install.sh  hiya-kde-install.sh
selinux/: bioauth.fc  bioauth.if  bioauth.te
src/: bio_common.c
src/cbor/: bio_cbor.h  bio_cbor_ctap2.c  bio_cbor_decoder.c  bio_cbor_encoder.c  meson.build
src/crypto/: bio_crypto.c  bio_crypto.h  meson.build
src/daemon/: bio_daemon.c  bio_daemon.h  bio_fprintd_compat.c  bio_fprintd_compat.h  main.c  meson.build
src/fido2/: bio_fido2.c  bio_fido2.h  bio_fido2_bio_cred.c  bio_fido2_credential.c  bio_fido2_pin.c  bio_fido2_transport.c  bio_fido2_uhid.c  bio_fido2_uhid.h  fido2_main.c  meson.build
src/fingerprint/: bio_fingerprint.c  bio_fingerprint.h  meson.build
src/pam/: meson.build  pam_bioauth.c  pam_bioauth.h  pam_hiya.c  pam_hiya.h
src/pm/: meson.build  pm_bio_wrap.c  pm_bio_wrap.h  pm_clipboard.c  pm_clipboard.h  pm_eff_wordlist.c  pm_eff_wordlist.h  pm_entry_store.c  pm_entry_store.h  pm_errors.c  pm_errors.h  pm_hibp.c  pm_hibp.h  pm_history.c  pm_history.h  pm_kdf.c  pm_kdf.h  pm_master_key.c  pm_master_key.h  pm_otp.c  pm_otp.h  pm_password_gen.c  pm_password_gen.h  pm_payload.c  pm_payload.h  pm_secure_mem.c  pm_secure_mem.h  pm_security_audit.c  pm_security_audit.h  pm_ssh_keys.c  pm_ssh_keys.h  pm_tpm_wrapping.c  pm_tpm_wrapping.h  pm_vault_format.c  pm_vault_format.h  pm_vault_store.c  pm_vault_store.h  pm_yubikey.c  pm_yubikey.h
src/portal/: bio_portal.c  meson.build  portal_main.c
src/ssh/: bio_ssh_sk.c  meson.build
src/tools/: bioauth-cli.c  bioauth_config.c  bioauth_enroll.c  bioauth_verify.c  hiya-cli.c  hiya_config.c  hiya_enroll.c  hiya_verify.c  meson.build
src/tpm/: bio_tpm.c  bio_tpm.h  meson.build
